# turlington-test

./: .gitignore  bot.py  embed.py  gameservers.py  joinleave.py  moderation.py  pyproject.toml  reactions.py  responses.py
.tmp.driveupload/: 58360  58380  58394  58400  58404  58408  58412  58416  58418  58422  58428  58548  58556  58562
resources/: bad_words.txt
turlington/: __main__.py  embed.py  gameservers.py  joinleave.py  moderation.py  reactions.py  responses.py
